<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dashboard_track_button"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_track_changes_white_36dp"
            android:textColor="@color/white"
            android:text="@string/tracking_ready"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dip"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/activities"
                android:gravity="center"/>

            <View
                android:layout_width="0dip"
                android:layout_weight=".008"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="0dip"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/last_trip"
                android:gravity="center"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/dashboard_piechart_activities"
                android:layout_width="0dip"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:id="@+id/dashboard_last_trip_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trip Name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/dashboard_last_trip_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Details"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/top_places_based_on_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@color/colorPrimary"
                android:text="@string/see_all_places"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:onClick="goToPlacesActivity"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/dashboard_top_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/no_places"/>

    </LinearLayout>

</ScrollView>